# elftools-rust

./: .gitignore  Cargo.toml  Makefile  README.md  gen.py
src/: elftools_const.rs  lib.rs
